<resources>
    <string name="lc_nest_under" />
    <string name="lc_name" />
    <string name="lc_no_parent" />
    <string name="add_file_attachment">Attach file</string>
    <string name="add_photo_attachment">Attach picture</string>
    <string name="save_draft">Save draft</string>
    <string name="discard">Discard</string>
    <string name="send">Send</string>
    <string name="mark_read">Mark read</string>
    <string name="mark_unread">Mark unread</string>
    <string name="toggle_read_unread">Toggle read unread</string>
    <string name="mute">Mute</string>
    <string name="add_star">Add star</string>
    <string name="remove_star">Remove star</string>
    <string name="remove_folder">Remove from %1$s</string>
    <string name="archive">Archive</string>
    <string name="report_spam">Report spam</string>
    <string name="mark_not_spam">Report not spam</string>
    <string name="delete">Delete</string>
    <string name="discard_drafts">Discard drafts</string>
    <string name="discard_failed">Discard failed</string>
    <string name="refresh">Refresh</string>
    <string name="reply">Reply</string>
    <string name="reply_all">Reply all</string>
    <string name="forward">Forward</string>
    <string name="menu_compose">Compose</string>
    <string name="menu_change_folders">Change labels</string>
    <string name="menu_move_to">Move to</string>
    <string name="menu_move_to_inbox">Move to Inbox</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_search">Search</string>
    <string name="menu_toggle_drawer">Toggle drawer</string>
    <string name="mark_important">Mark important</string>
    <string name="mark_not_important">Mark not important</string>
    <string name="menu_add_contact">Add from Contacts</string>
    <string name="save_attachment">Save</string>
    <string name="download_again">Download again</string>
    <string name="menu_photo_save_all">Save all</string>
    <string name="menu_photo_share">Share</string>
    <string name="menu_photo_share_all">Share all</string>
    <string name="menu_photo_print">Print</string>
    <string name="preference_advance_to_title">Auto-advance</string>
    <string name="prefDialogTitle_autoAdvance">Advance to</string>
    <string name="preference_show_images_title">Images</string>
    <string name="preferences_signature_title">Signature</string>
    <string name="preferences_signature_dialog_title">Signature</string>
    <string name="preference_removal_action_title">Gmail default action</string>
    <string name="prefDialogTitle_removal_action">Default action</string>
    <string name="preferences_default_reply_all_title">Reply all</string>
    <string name="preferences_default_reply_all_summary">Use as default for message replies</string>
    <string name="preference_swipe_title">Swipe actions</string>
    <string name="preference_swipe_description">In conversation list</string>
    <string name="preference_enable_threading_title">Conversation view</string>
    <string name="preference_enable_threading_description">Group emails in the same conversation together for IMAP and POP3 accounts</string>
    <string name="preference_sender_image_title">Sender image</string>
    <string name="preference_sender_image_description">Show beside name in conversation list</string>
    <string name="empty_trash">Empty Trash</string>
    <string name="empty_spam">Empty Spam</string>
    <string name="preferences_vacation_responder_title">Vacation responder</string>
    <string name="help_and_feedback">Help &amp; feedback</string>
    <string name="preference_header_action_confirmations">Action Confirmations</string>
    <string name="preference_confirm_before_delete_title">Confirm before deleting</string>
    <string name="preference_confirm_before_archive_title">Confirm before archiving</string>
    <string name="preference_confirm_before_send_title">Confirm before sending</string>
    <string name="preferences_conversation_mode_title">Auto-fit messages</string>
    <string name="preferences_conversation_mode_summary">Shrink messages to fit the screen</string>
    <string name="set_priority">Set priority</string>
    <string name="trigger_compose_char">n</string>
    <string name="trigger_delete_char">\u0008</string>
    <string name="trigger_send_char">"
"</string>
    <string name="trigger_save_char">s</string>
    <string name="trigger_refresh_char">u</string>
    <string name="trigger_toggle_drawer_char">m</string>
    <string name="trigger_settings_char">,</string>
    <string name="trigger_help_char">/</string>
    <string name="trigger_toggle_read_unread_char">i</string>
    <string name="trigger_print_char">p</string>
    <string name="add_cloud_attachment">Insert from Drive</string>
    <string name="attachment_extra_option1">Save to Drive</string>
    <string name="prefDefault_autoAdvance">list</string>
    <string name="prefDefault_removal_action">archive</string>
    <string name="account_settings_background_attachments_label">Download attachments</string>
    <string name="account_settings_background_attachments_summary">Auto-download attachments to recent messages via Wi-Fi</string>
    <string name="account_settings_notify_label">Email notifications</string>
    <string name="account_settings_notify_summary">Send notification when email arrives</string>
    <string name="account_settings_mail_check_frequency_label">Sync frequency</string>
    <string name="account_settings_incoming_label">Incoming settings</string>
    <string name="account_settings_incoming_summary">Username, password, and other incoming server settings</string>
    <string name="account_settings_outgoing_label">Outgoing settings</string>
    <string name="account_settings_outgoing_summary">Username, password, and other outgoing server settings</string>
    <string name="account_settings_enforced_label">Policies enforced</string>
    <string name="account_settings_enforced_summary">None</string>
    <string name="account_settings_unsupported_label">Unsupported policies</string>
    <string name="account_settings_unsupported_summary">None</string>
    <string name="account_settings_retry_label">Attempt sync</string>
    <string name="account_settings_retry_summary">Tap here to sync this account</string>
    <string name="account_settings_description_label">Account name</string>
    <string name="account_settings_name_label">Your name</string>
    <string name="account_settings_edit_quick_responses_label">Quick responses</string>
    <string name="account_settings_edit_quick_responses_summary">Edit text that you frequently insert when composing email</string>
    <string name="account_settings_notifications">Notification settings</string>
    <string name="account_settings_data_usage">Data usage</string>
    <string name="account_settings_policies">Security policies</string>
    <string name="system_folders_title">System folders</string>
    <string name="system_folders_trash_title">Trash folder</string>
    <string name="system_folders_trash_summary">"Select your server's trash folder"</string>
    <string name="system_folders_trash_dlg">"Select your server's trash folder"</string>
    <string name="system_folders_sent_title">Sent items folder</string>
    <string name="system_folders_sent_summary">"Select your server's sent items folder"</string>
    <string name="system_folders_sent_dlg">"Select your server's sent items folder"</string>
    <string name="account_settings_sync_contacts_enable">Sync contacts</string>
    <string name="account_settings_sync_contacts_summary">Sync contacts for this account</string>
    <string name="account_settings_sync_calendar_enable">Sync calendar</string>
    <string name="account_settings_sync_calendar_summary">Sync calendar event for this account</string>
    <string name="account_settings_sync_email_enable">Sync email</string>
    <string name="account_settings_sync_email_summary">Sync email for this account</string>
    <string name="label_notification_vibrate_title">Vibrate</string>
    <string name="account_settings_ringtone">Choose ringtone</string>
    <string name="account_settings_servers">Server settings</string>
    <string name="mailbox_settings_sync_enabled_label">Sync this folder</string>
    <string name="mailbox_settings_sync_enabled_summary">Messages will download when connected</string>
    <string name="mailbox_settings_mailbox_sync_window_label">Days of mail to sync</string>
    <string name="app_restrictions_email_address_title">Email Address</string>
    <string name="app_restrictions_email_address_description">A variable field that supports a specific email address (janedoe@company.com) or templated value ($emailaddress$). EMMs can use this field to pull user credentials from ActiveDirectory.</string>
    <string name="app_restrictions_exchange_host_title">Hostname or Host</string>
    <string name="app_restrictions_exchange_host_description">The complete hostname for the ActiveSync server, such as hostname.company.com:443. The hostname may be accessed through an EMM on-site proxy server, a load-balanced VIP (virtual IP) serving multiple ActiveSync servers, or directly to the public CAS (client access server). Specified host should not be redirected to another host. Defaults to port 443 unless specified otherwise.</string>
    <string name="app_restrictions_exchange_username_title">Username</string>
    <string name="app_restrictions_exchange_username_description">"A variable field for user's Active Directory username that can be specified as a direct username (janedoe) or templated value ($username$). The username and user's email address may be different."</string>
    <string name="app_restrictions_exchange_device_id_title">Device Identifier</string>
    <string name="app_restrictions_exchange_device_id_description">A string containing the EAS (Exchange ActiveSync) device ID, which may be used by some EMM gateways to correlate devices.</string>
    <string name="app_restrictions_exchange_ssl_required_title">SSL Required</string>
    <string name="app_restrictions_exchange_ssl_required_description">A boolean value that enables and requires SSL on port numbers used with Hostname when set to True (default). (This setting is ignored when port 443 is used in Hostname).</string>
    <string name="app_restrictions_exchange_trust_all_certificates_title">Trust all Certificates</string>
    <string name="app_restrictions_exchange_trust_all_certificates_description">A boolean value that disables validation checks on SSL certificates used in communications between ActiveSync servers, proxies, or gateways, and other email servers. Set to True to disable validation checks when using self-signed Certificates or for testing purposes. By default, this value is False: validation checks are performed.</string>
    <string name="app_restrictions_exchange_login_certificate_alias_title">Login Certificate Alias</string>
    <string name="app_restrictions_exchange_login_certificate_alias_description">"A string alias for a private key certificate stored in the work-profile keystore by an EMM's DPC app that will be used for authenticating to the ActiveSync Servers."</string>
    <string name="app_restrictions_default_signature_title">Default Email Signature</string>
    <string name="app_restrictions_default_signature_description">A string comprising the default email signature to be appended to bottom of all outbound email message text.</string>
    <string name="app_restrictions_default_exchange_sync_window_title">Default Sync Window</string>
    <string name="app_restrictions_default_exchange_sync_window_description">A value from 0-5 that represents the time window for syncing with EAS (Exchange ActiveSync). Defaults to one week (value=3). [0=No filter, synchronize all items. 1=1 day. 2=3 days. 3=1 week. 4=2 weeks. 5=1 month.] See https://msdn.microsoft.com/en-us/library/gg709713(v=exchg.80).aspx for complete information about sync window settings.</string>
</resources>