<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@id/empty_trash" android:title="@string/empty_trash" android:alphabeticShortcut="@string/trigger_delete_char" app:showAsAction="never" />
    <item android:id="@id/empty_spam" android:title="@string/empty_spam" android:alphabeticShortcut="@string/trigger_delete_char" app:showAsAction="never" />
    <item android:icon="@drawable/ic_pencil_wht_24dp" android:id="@id/compose" android:visible="false" android:title="@string/menu_compose" android:alphabeticShortcut="@string/trigger_compose_char" app:showAsAction="always" />
    <item android:icon="@drawable/ic_menu_search" android:id="@id/search" android:title="@string/menu_search" app:showAsAction="collapseActionView|ifRoom" />
    <item android:id="@id/refresh" android:visible="false" android:title="@string/refresh" android:alphabeticShortcut="@string/trigger_refresh_char" />
    <item android:id="@id/toggle_read_unread" android:visible="false" android:title="@string/toggle_read_unread" android:alphabeticShortcut="@string/trigger_toggle_read_unread_char" />
    <item android:id="@id/toggle_drawer" android:visible="false" android:title="@string/menu_toggle_drawer" android:alphabeticShortcut="@string/trigger_toggle_drawer_char" />
    <item android:id="@id/settings" android:visible="false" android:title="@string/menu_settings" android:alphabeticShortcut="@string/trigger_settings_char" />
    <item android:id="@id/help_info_menu_item" android:visible="false" android:title="@string/help_and_feedback" android:alphabeticShortcut="@string/trigger_help_char" />
</menu>