<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@id/compose" android:visible="false" android:title="@string/menu_compose" android:alphabeticShortcut="@string/trigger_compose_char" />
    <item android:id="@id/refresh" android:visible="false" android:title="@string/refresh" android:alphabeticShortcut="@string/trigger_refresh_char" />
    <item android:id="@id/toggle_read_unread" android:visible="false" android:title="@string/toggle_read_unread" android:alphabeticShortcut="@string/trigger_toggle_read_unread_char" />
    <item android:id="@id/settings" android:visible="false" android:title="@string/menu_settings" android:alphabeticShortcut="@string/trigger_settings_char" />
    <item android:id="@id/help_info_menu_item" android:visible="false" android:title="@string/help_and_feedback" android:alphabeticShortcut="@string/trigger_help_char" />
</menu>